# wandering-ant

./: CMakeLists.txt  main.cpp
include/: Ant.h  IMovementBehavior.h  SeekBehavior.h  WanderBehavior.h  World.h
src/: Ant.cpp  SeekBehavior.cpp  WanderBehavior.cpp  World.cpp
